Added Anim Dependency
Added Anim Dependency and a clean up on the enroll fingerptrint
activity.

--- a/app/src/main/res/layout/activity_lecturer_search.xml
+++ b/app/src/main/res/layout/activity_lecturer_search.xml
@@ -57,10 +57,11 @@
     </RelativeLayout>
 
     <include
+        android:visibility="gone"
         android:id="@+id/loading"
         layout="@layout/loading"/>
 
-    <include android:id="@+id/notFound"
+    <include android:visibility="gone" android:id="@+id/notFound"
         layout="@layout/not_found"/>
 
     <androidx.recyclerview.widget.RecyclerView
