--- a/app/src/main/res/layout/activity_enroll_fingerprint.xml
+++ b/app/src/main/res/layout/activity_enroll_fingerprint.xml
@@ -13,6 +13,18 @@
         android:layout_weight="1"
         android:layout_height="0dp"
         android:background="@drawable/bottom_curves">
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp" />
+
+        <ListView
+            android:id="@+id/in"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_weight="1"
+            android:stackFromBottom="true"
+            android:transcriptMode="alwaysScroll"></ListView>
 
         <ImageView
             android:id="@+id/backBtn"
@@ -74,6 +86,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/startPanel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -117,7 +130,22 @@
             android:paddingLeft="75dp"
             android:paddingRight="85dp"
             android:layout_marginTop="15dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_fingerprint" />
+
+        <TextView
+            android:id="@+id/deviceName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Bluetooth connected: HF4000AWQ"
+            android:textSize="15sp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/primaryText"
+            android:textStyle="normal"/>
 
         <pl.droidsonroids.gif.GifImageView
             android:layout_width="wrap_content"
@@ -127,7 +155,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/searchBtPanel"
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -140,6 +167,18 @@
             android:layout_height="100dp"
             android:src="@drawable/sad"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Bluetooth is disconnected"
+            android:textSize="15sp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/primaryText"
+            android:textStyle="normal"/>
         <Button
             android:id="@+id/searchBT"
             android:textStyle="bold"
@@ -153,7 +192,8 @@
             android:drawablePadding="10dp"
             android:paddingLeft="75dp"
             android:paddingRight="85dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_fingerprint" />
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
