Graphql hook was connected successfully!
Graphql hook was connected successfully and login logic works perfectly.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LoginActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"
+    tools:ignore="RtlCompat" >
 
     <include android:id="@+id/loading" layout="@layout/loading" android:visibility="gone"/>
 
