Student Biometric Update
Student Biometric Update was initiated successfully.
The SDK classes was separated successfully for other Activities to call
static methods.
Adjustments was made in adminQuery

--- a/app/src/main/res/layout/update_error_dialog.xml
+++ b/app/src/main/res/layout/update_error_dialog.xml
@@ -40,7 +40,7 @@
             android:textAlignment="center"/>
 
         <Button
-            android:id="@+id/tryAgainBtn"
+            android:id="@+id/errorBtn"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="60dp"
