--- a/app/src/main/res/layout/activity_update_fingerprint.xml
+++ b/app/src/main/res/layout/activity_update_fingerprint.xml
@@ -15,6 +15,33 @@
         android:layout_height="0dp"
         android:background="@drawable/bottom_curves">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/deviceInfoPanel"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_margin="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Connected to: "
+                android:textSize="16sp"
+                android:textColor="@color/whiteColor"
+                android:textStyle="normal"/>
+            <TextView
+                android:id="@+id/deviceName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="HF4000AWQ"
+                android:textSize="18sp"
+                android:textColor="@color/whiteColor"
+                android:textStyle="normal"/>
+        </LinearLayout>
+
+
         <ImageView
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
@@ -57,7 +84,12 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_below="@id/imgContainer"
-            android:text="Hello Chukumaobim!"
+            android:text="Hello!"
+            android:lines="1"
+            android:ems="6"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:ellipsize="end"
             android:textSize="35sp"
             android:textAlignment="center"
             android:textColor="@color/whiteColor"/>
@@ -75,6 +107,8 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/startPanel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
@@ -108,6 +142,48 @@
             android:layout_height="wrap_content"
             android:src="@drawable/fingerprint2"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/searchBtPanel"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@drawable/sad"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Bluetooth is disconnected"
+            android:textSize="15sp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/primaryText"
+            android:textStyle="normal"/>
+        <Button
+            android:id="@+id/searchBT"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="Search Bluetooth"
+            android:textAlignment="center"
+            android:textColor="@color/whiteColor"
+            android:background="@drawable/rounded_btn"
+            android:drawableStart="@drawable/ic_fingerprint"
+            android:drawablePadding="10dp"
+            android:paddingLeft="75dp"
+            android:paddingRight="85dp"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_fingerprint" />
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
