--- a/app/src/main/res/layout/activity_update_fingerprint.xml
+++ b/app/src/main/res/layout/activity_update_fingerprint.xml
@@ -71,7 +71,7 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/profile_img"
+                    android:src="@drawable/avatar"
                     android:scaleType="centerCrop"/>
 
             </androidx.cardview.widget.CardView>
@@ -184,6 +184,15 @@
             android:paddingRight="85dp"
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_fingerprint" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp">
+        <include layout="@layout/loading" android:id="@+id/loading"/>
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
