--- a/app/src/main/res/layout/enroll_error_dialog.xml
+++ b/app/src/main/res/layout/enroll_error_dialog.xml
@@ -30,6 +30,7 @@
             android:textAlignment="center"/>
 
         <TextView
+            android:id="@+id/errorMsg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="35dp"
