--- a/app/src/main/res/layout/update_error_dialog.xml
+++ b/app/src/main/res/layout/update_error_dialog.xml
@@ -30,6 +30,7 @@
             android:textAlignment="center"/>
 
         <TextView
+            android:id="@+id/errorMsg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="35dp"
@@ -39,19 +40,37 @@
             android:textColor="@color/secondaryText"
             android:textAlignment="center"/>
 
-        <Button
-            android:id="@+id/errorBtn"
-            android:textStyle="bold"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="Try Again"
-            android:background="@drawable/rounded_btn_error"
-            android:textAlignment="center"
-            android:textColor="@color/whiteColor"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="40dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_gravity="center"/>
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/errorBtn"
+                android:textStyle="bold"
+                android:layout_width="140dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:text="Try Again"
+                android:background="@drawable/rounded_btn_error"
+                android:textAlignment="center"
+                android:textColor="@color/whiteColor"/>
+
+            <Button
+            android:id="@+id/cancelBtn"
+            android:textStyle="bold"
+            android:layout_width="140dp"
+            android:layout_height="60dp"
+                android:layout_margin="5dp"
+            android:text="Cancel"
+            android:background="@drawable/rounded_btn"
+            android:textAlignment="center"
+            android:textColor="@color/whiteColor"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
