--- a/app/src/main/res/layout/authorize_attendance.xml
+++ b/app/src/main/res/layout/authorize_attendance.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="35dp"
             android:layout_marginLeft="35dp"
-            android:text="To start this attendance, lecturer should place their finger on the scanner."
+            android:text="To start this attendance, l should place their finger on the scanner."
             android:textSize="18sp"
             android:textColor="@color/secondaryText"
             android:textAlignment="center"/>
