--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
              android:layout_gravity="center">
 
              <androidx.appcompat.widget.AppCompatImageView
+                 android:id="@+id/profileImg"
                  android:layout_width="100dp"
                  android:layout_height="100dp"
                  android:src="@drawable/avatar"
@@ -70,6 +71,7 @@
          </androidx.cardview.widget.CardView>
 
      </androidx.cardview.widget.CardView>
+
         <Button
             android:id="@+id/signOut"
             android:layout_below="@id/photoPanel"
