--- a/app/src/main/res/layout/admin_menu.xml
+++ b/app/src/main/res/layout/admin_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1.5"
     android:columnCount="2"
     android:rowCount="2"
     android:padding="10dp"
+    tools:ignore="RtlCompat"
     >
 
     <!--    first option-->
