--- a/app/src/main/res/layout-normal/activity_update_fingerprint.xml
+++ b/app/src/main/res/layout-normal/activity_update_fingerprint.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EnrollFingerprintActivity"
+    tools:context=".UpdateFingerprintActivity"
     android:background="@color/whiteColor">
 
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_weight="1.5"
+        android:layout_weight="1"
         android:layout_height="0dp"
         android:background="@drawable/bottom_curves">
 
@@ -43,7 +43,6 @@
                 android:scaleType="centerCrop"/>
 
         </LinearLayout>
-
         <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
@@ -51,13 +50,13 @@
             android:layout_centerVertical="true"
             android:layout_below="@id/imgContainer"
             android:text="Hello!"
-            android:lines="1"
-            android:ems="6"
-            android:ellipsize="end"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="35sp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textSize="28sp"
             android:textAlignment="center"
+            android:lines="1"
+            android:ems="8"
+            android:ellipsize="end"
             android:textColor="@color/whiteColor"
             android:gravity="center_horizontal" />
 
@@ -66,7 +65,7 @@
             android:layout_height="wrap_content"
             android:text="Fingerprint Update"
             android:layout_below="@id/username"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textAlignment="center"
             android:textColor="@color/whiteColor"
             android:gravity="center_horizontal" />
@@ -114,9 +113,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="visible"
         android:id="@+id/searchBtPanel"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical">
@@ -124,7 +122,7 @@
         <ImageView
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="100dp"
             android:src="@drawable/sad"/>
 
         <TextView
@@ -133,7 +131,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="Bluetooth is disconnected"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
             android:textAlignment="center"
@@ -144,10 +142,7 @@
             android:id="@+id/searchBT"
             android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textSize="16sp"
+            android:layout_height="60dp"
             android:text="Search Bluetooth"
             android:textAlignment="center"
             android:textColor="@color/whiteColor"
@@ -164,9 +159,10 @@
         android:visibility="gone"
         android:id="@+id/loadingPanel"
         android:layout_width="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_height="0dp">
         <include layout="@layout/loading" android:id="@+id/loading"/>
     </LinearLayout>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
